# wikipedia-retrieval-evals

./: .gitignore  README.md  pyproject.toml
docs/: DESIGN.md
eval/: _movies_facts.md  _qa_cache.json  discover_bridges.py  discover_movies.py  discover_stubs.py  extract_movie_facts.py  find_post_cutoff_pages.py  judge.py  post_cutoff_articles.json  run_eval.py  test_cases.jsonl  test_cases_bridges.jsonl  test_cases_earthquake.jsonl  test_cases_movies.jsonl  test_cases_stubs.jsonl
eval/_bridges_corpus/: Chuandian Jinsha River Bridge.txt  Dala Bridge.txt  Fuxing Yangtze River Bridge.txt  Guanyinsi Yangtze River Bridge.txt  Jinqi Bridge.txt  Kahaluo Jinsha River Bridge.txt  Ma'anshan Yangtze River Rail-Road Bridge.txt  Mandurah Estuary Bridge.txt  Nichupté Vehicular Bridge.txt  Portal North Bridge.txt  Shohadaye Ashrafol-Belad Behshahr Bridge.txt  Shuangliu Yangtze River Bridge.txt  Stal̕əw̓asəm Bridge.txt  Xindu Jinsha River Bridge.txt  Yanji Yangtze River Bridge.txt  _summary.json
eval/_movies_corpus/: A House of Dynamite.txt  Anaconda (2025 film).txt  Avatar_ Fire and Ash.txt  Black Phone 2.txt  Bugonia (film).txt  Caught Stealing.txt  Eddington (film).txt  Five Nights at Freddy's 2 (film).txt  Frankenstein (2025 film).txt  Marty Supreme.txt  Michael (2026 film).txt  Mortal Kombat II (film).txt  Mufasa_ The Lion King.txt  Ne Zha 2.txt  Now You See Me_ Now You Don't.txt  One Battle After Another.txt  Pegasus 3.txt  Predator_ Badlands.txt  Roofman.txt  Scream 7.txt  Sentimental Value.txt  Sinners (2025 film).txt  Spider-Man_ Brand New Day.txt  Tron_ Ares.txt  (+9 more)
(+414 files in other folders)
